Made it so using the shield while sneaking doesn't further slow the player down. This means that the shield works with Swift Sneak